--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  background-image: url(../assets/background_b.jpg);
+  /*background-image: url(../assets/background_b.jpg);*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
